Prevent inline links from wrapping

--- a/styles/InlineLink.module.css
+++ b/styles/InlineLink.module.css
@@ -2,6 +2,7 @@
   font-weight: bold;
   color: var(--highlight);
   transition: all 150ms;
+  white-space: nowrap;
 }
 
 .link:hover {
